--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,16 @@
+# Details
+title: AAC Books
+description: Theme for AAC Info
+
+# Favicon
+favicon_32: icon/ace-icon-32x32.png
+favicon_192: icon/ace-icon-192x192.png
+favicon_180: icon/ace-icon-180x180.png
+favicon_270: icon/ace-icon-270x270.png
+
+# Analytics
+google_analytics_key:
+
 # Settings
-port: 4111
-safe: false
-exclude: [CNAME, README.md, .gitignore]
-
-# Permalinks
-permalink:           /:title
-
-# Setup
-title:               'AAC Theme'
-tagline:             'A Simple Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme.'
-source_link:         'https://github.com/'
-baseurl:             ''
-
-# About/contact
-author:
-  name:              Riten Vagadiya
-  url:               http://riten.io
-  email:             i@ritenv.com
-
-# Custom vars
-version:             1.0.0
-favicon:     #put a path like: 'img/favicon.ico'
-google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
-foot_text:          'Copyright © 2014 ACE Centre. ACE Centre is a registered charity in England and Wales (charity number 1089313) and a company limited by guarantee (company number 04268143). Registered office: ACE Centre, Hollinwood Business Centre, Albert Street, Oldham, OL8 3QL. VAT registration number 785728278'
-header_image:       'assets/images/logo-1.png'
+sass:
+  sass_dir: _sass
